k8s-onprem/04-application/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bems-prod
  labels:
    environment: production

---
apiVersion: v1
kind: Namespace
metadata:
  name: bems-data
  labels:
    environment: production
    tier: data

---
apiVersion: v1
kind: Namespace
metadata:
  name: bems-storage
  labels:
    environment: production
    tier: storage
